Closed
Bug 503047
Opened 16 years ago
Closed 16 years ago
element.select() does not trigger select event anymore.
Categories
(Core :: DOM: Events, defect, P2)
Tracking
()
RESOLVED
FIXED
| Tracking | Status | |
|---|---|---|
| status1.9.2 | --- | beta1-fixed |
People
(Reporter: arno, Assigned: enndeakin)
References
Details
(Keywords: regression)
Attachments
(2 files, 1 obsolete file)
|
555 bytes,
text/html
|
Details | |
|
2.44 KB,
patch
|
bzbarsky
:
review+
|
Details | Diff | Splinter Review |
Hi,
when selecting a text input with javascript (input.select()), it's select handler is not executed.
It works fine with firefox 3.0 and 3.5 but is broken in latest nightly.
| Reporter | ||
Comment 1•16 years ago
|
||
Comment 2•16 years ago
|
||
Regression range would be very useful.
| Reporter | ||
Comment 3•16 years ago
|
||
I don't known how to get a regression range.
I'm trying to get builds on ftp://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/
but it's a pain to find things: I'm trying to look in *-mozilla-central directories, but in most of them, there is no linux build. Is there an easy way to get old xulrunner/firefox builds ?
Comment 4•16 years ago
|
||
nightly builds are usually used to find regression range.
Linux builds are typically in the same -XX-mozilla-central, but from time to time
the -XX- changes.
It is usually best to use binary search (or similar) to find regression range.
We know that 1.9.1 doesn't have the bug and 1.9.1 branched late November 08.
So I'd start from a build around mid March 09.
Updated•16 years ago
|
Version: unspecified → Trunk
| Reporter | ||
Comment 5•16 years ago
|
||
This one does not have the bug:
ftp://ftp.mozilla.org/pub/firefox/nightly/2009/06/2009-06-10-03-mozilla-central/
This one does:
ftp://ftp.mozilla.org/pub/firefox/nightly/2009/06/2009-06-11-03-mozilla-central/
Updated•16 years ago
|
Flags: blocking1.9.2?
| Assignee | ||
Comment 7•16 years ago
|
||
Assignee: nobody → enndeakin
Status: NEW → ASSIGNED
| Assignee | ||
Comment 8•16 years ago
|
||
The code here is checking if the window is active and doesn't fire a select event if it is not. This was added by bug 92879 to avoid a focus stealing issue. I have a feeling that check may not be even needed anymore though. Perhaps we could simplify the code entirely.
| Assignee | ||
Comment 9•16 years ago
|
||
Attachment #387493 -
Attachment is obsolete: true
Attachment #387538 -
Flags: review?(bzbarsky)
Updated•16 years ago
|
Attachment #387538 -
Flags: review?(bzbarsky) → review+
| Assignee | ||
Comment 10•16 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Updated•16 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•