Bug 503047, element.select() should fire select event, r=bz